# assignment8-csc418

./: .gitignore  CMakeLists.txt  README.md  main.cpp  ppm_to_jpeg.py
include/: AABBTree.h  Camera.h  Material.h  Object.h  Triangle.h  first_hit.h  perlin_noise.h  pthread_args_struct.h  random_direction.h  ray_intersect_box.h  ray_tracer.h  read_json.h  refract.h  set_color.h  smooth_step.h
scene/: face.stl  scene.json  test.json
src/: AABBTree.cpp  DirectionalLight.cpp  Plane.cpp  PointLight.cpp  Sphere.cpp  Triangle.cpp  TriangleSoup.cpp  blinn_phong_shading.cpp  creative.json  first_hit.cpp  insert_box_into_box.cpp  insert_triangle_into_box.cpp  per_corner_normals.cpp  ray_intersect_box.cpp  ray_tracer.cpp  raycolor.cpp  reflect.cpp  refract.cpp  set_color.cpp  triangle_area_normal.cpp  vertex_triangle_adjacency.cpp  viewing_ray.cpp  write_ppm.cpp
